--- a/css/colors/default.css
+++ b/css/colors/default.css
@@ -62,7 +62,7 @@ html body {
 }
 
 header {
-	background: #000;
+	background: #f5f5f5;
 }
 
 
@@ -93,7 +93,7 @@ header {
 /* -- Popular Words -- */
 
 .top-navigation {
-	background-color: #FFF;
+	background-color: #e3ebef;
 }
 
 .popular-words strong {
